# qniverse-services

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docker/: Dockerfile  docker-compose.yml
k8s/: deployment.yaml
lib/qniverse-quantum-transpiler/: README.md  package-lock.json  package.json
lib/qniverse-quantum-transpiler/src/: index.js  qasm_converter.js
scripts/: init_db.py  qniverse_services.service
src/: config.py  main.py  models.py
src/api/dependencies/: __init__.py  auth.py
src/api/routes/: __init__.py  health.py  languages.py  package.py  qrng.py  transpile.py
src/core/: exceptions.py  interfaces.py  package_worker.py  tasks.py
src/middleware/: logging.py  rate_limit.py  request_id.py
src/qrng/cloudqrng/: cloudqrng.py
src/qrng/randomness/: CLI.txt  generator.py  polynomial_mixer.py  randomness_processor.py  toeplitz_mixer.py  tooltip.txt  validateInputBits.js  von_neumann_extractor.py  xor_mixer.py
src/services/: cache_service.py  job_service.py  package_service.py  qrng_service.py  transpilation_service.py
src/transpilers/: __init__.py  base.py  python_to_js.py  qasm_to_cirq.py  qasm_to_cudaq.py  qasm_to_qi.py  qasm_to_qiskit.py  qasm_to_quest.py  qasm_to_quil.py  qasm_to_qulacs.py  registry.py
src/utils/: helpers.py  logger.py  metrics.py  validators.py
src/workers/: package_worker.py  run_worker.py
tests/: conftest.py
tests/test_api/: test_health.py  test_languages.py  test_packages.py  test_transpile.py
(+15 files in other folders)
